# OriginAPI

./: README.md  main.py  origin_connector.py  pyproject.toml
config/: settings.py
db/: player.py  session.py
models/: discord_link.py  player.py  tracker.py
modules/: origin_api.py  token.json
routers/player/: player_api.py  player_srv.py
schemas/: base_legend.py  profile.py
schemas/legends/: ash.py  bangalore.py  bloodhound.py  caustic.py  crypto.py  fuse.py  gibraltar.py  horizon.py  lifeline.py  loba.py  mad_maggie.py  mirage.py  octane.py  pathfinder.py  rampart.py  revenant.py  seer.py  valkyrie.py  wattson.py  wraith.py
scripts/scrap_mapping/: format_data.py  mapping.json  script.py
utils/: rank.py  sync_values.py
